--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "react-scripts": "^3.2.0",
     "react-table": "^6.10.3",
     "semantic-ui-react": "^0.88.1",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "bootstrap": "^4.3.1",
+    "concurrently": "^4.0.1",
+    "datatables.net": "^1.10.20",
+    "jquery": "^3.4.1",
+    "loader-utils": "^1.0.4",
+    "popper.js": "^1.15.0"
   },
   "devDependencies": {
     "bootstrap": "^4.3.1",
