--- a/package.json
+++ b/package.json
@@ -33,14 +33,34 @@
     "datatables.net": "^1.10.20",
     "jquery": "^3.4.1",
     "loader-utils": "^1.0.4",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+
+    "@grapecity/spread-sheets-react": "^12.2.5",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "npm": "^6.11.3",
+    "react": "^16.4.0",
+    "react-bar-chart": "^0.1.2",
+    "react-bootstrap": "^0.32.4",
+    "react-data-table-component": "^3.5.0",
+    "react-export-excel": "^0.5.3",
+    "react-file-drop": "^0.2.8",
+    "react-google-charts": "^3.0.15",
+    "react-responsive-data-table": "^1.0.4",
+    "react-router-dom": "^5.1.0",
+    "react-scripts": "^3.2.0",
+    "react-table": "^6.10.3",
+    "semantic-ui-react": "^0.88.1",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "webpacker": "node --max_old_space_size=4096 node_modules/.bin/webpack-dev-server --progress --color --config config/webpack/development.js"
+    "webpacker": "node --max_old_space_size=4096 node_modules/.bin/webpack-dev-server --progress --color --config config/webpack/development.js",
+     "heroku-prebuild": "export NPM_CONFIG_PRODUCTION=false; export NODE_ENV=; NPM_CONFIG_PRODUCTION=false NODE_ENV=development npm install --only=dev --dev",
+    "heroku-postbuild": "export NPM_CONFIG_PRODUCTION=true; export NODE_ENV=production;"
   },
   "browserslist": {
     "production": [
